--- a/styles/styles.css
+++ b/styles/styles.css
@@ -606,7 +606,7 @@ header{
 .actividades__carrusel-list{
     display: flex;
     width: 400%;
-    height: 70dvh;
+    height: 50dvh;
     animation: slider 20s infinite;
 }
 .actividades__carrusel-item{
@@ -848,6 +848,9 @@ header{
     .clases__item:nth-child(2), .clases__item:nth-child(4){
     background-color: #2a0202;
     flex-flow: nowrap;
+    }
+    .actividades__carrusel-list{
+    height: 90dvh;
     }
     .actividades__galery-list{
     grid-template-columns: repeat(3, 1fr);
