--- a/styles/styles.css
+++ b/styles/styles.css
@@ -673,6 +673,7 @@ header{
 }
 .contacto__list{
     display: flex;
+    flex-direction: column;
     height: 100%;
     width: 100%;
     gap: 50px;
