--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,8 +68,8 @@ header{
 .header__logo{
     display: block;
     z-index: 2;
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     margin: 10px 20px;
 }
 .header__logo-img{
@@ -110,8 +110,8 @@ header{
 }
 .header__check{
     background-color: #8b8b8b62;
-    padding: 5px 15px;
-    border-radius: 6px;
+    padding: 6px 16px;
+    border-radius: 4px;
 }
 .header__checkbox{
     display: none;
@@ -512,18 +512,19 @@ header{
 /*-------------------------------------------------------PROGRAMAS-------------------------------------------------------*/
 .programas{
     text-align: center;
-    padding: 50px 40px;
+    padding: 30px 40px;
     background: linear-gradient(#000c1a,#00030a);
 }
 .programas-title{
     color: #baaa33;
 }
 .programas-list{
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     text-align: left;
     flex-wrap: wrap;
     display: flex;
+    padding: 20px;
     gap: 30px;
 }
 .programas-item{
@@ -531,12 +532,13 @@ header{
     flex-direction: column;
     display: flex;
     border-radius: 8px;
-    height: 300px;
+    height: 250px;
     width: 100%;
-    max-width: 580px;
+    max-width: 460px;
     background-color: #000000e0;
 }
 .programas-item:hover{
+    outline: solid 1px white;
     box-shadow: 0px 2px 5px 0 #6a6a6a;
 }
 .programas-item-img{
@@ -544,11 +546,10 @@ header{
     object-fit: cover;
     width: 100%;
     height: 100%;
-    opacity: 0.5;
+    opacity: 0.6;
     border-radius: 8px;
 }
 .programas-info{
-    gap: 5px;
     width: 100%;
     height: 100%;
     padding: 10px 30px;
@@ -559,7 +560,6 @@ header{
     justify-content: space-evenly;
 }
 .programas-info ul{
-    gap: 4px;
     display: flex;
     padding-left: 40px;
     flex-direction: column;
@@ -571,7 +571,7 @@ header{
 /*------------------------------------------------------INSCRIPCION------------------------------------------------------*/
 .programas__inscripcion{
     text-align: center;
-    padding: 50px 20px;
+    padding-bottom: 50px;
     background: linear-gradient(#00030a, #2a0202) ;
 }
 .programas__inscripcion-list{
@@ -794,16 +794,18 @@ header{
     height: 90px;
 }
 /*----------------------------------------------------SECCION CONTACTO---------------------------------------------------*/
-
 .download{
     justify-content: center;
     align-items: center;
     display: flex;
-    margin: 30px 0;
-    background-color: #011328;
-    padding: 40px;
-    border-radius: 10px;
-    max-width: 440px;
+    background-color: #007470;
+    padding: 20px;
+    border-radius: 8px;
+    max-width: 270px;
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    z-index: 999;
 }
 .download-btn{
     display: flex;
@@ -819,7 +821,7 @@ header{
 .download-link{
     display: flex;
     align-items: center;
-    gap: 14px;
+    gap: 10px;
 }
 .download-info{
     display: flex;
@@ -827,22 +829,21 @@ header{
     align-items: start;
     justify-content: center;
     text-align: left;
-    gap: 5px;
+    gap: 3px;
     color: #e6e6e6;
 }
 .download-title{
     margin-left: 10px;
-    font-size: 1.5rem;
-}
-.download-span{
-    margin-left: 10px;
     font-size: 1rem;
 }
-.download-icon{
-    width: 20px;
-    height: 20px;
+.download-span{
+    margin-left: 8px;
+    font-size: 0.7rem;
 }
-
+.download-icon{
+    width: 40px;
+}
+/*----------------------------------------------------SECCION CONTACTO---------------------------------------------------*/
 /*------------------------------------------------------ANIMACIONES------------------------------------------------------*/
 @keyframes aparecer{
     from{
@@ -866,7 +867,6 @@ header{
     100% { margin-left: -300%; }
 }
 /*------------------------------------------------------ANIMACIONES------------------------------------------------------*/
-
 /*-------------------------------------------------------RESPONSIVE------------------------------------------------------*/
 @media (min-width:750px){
     html{
@@ -882,11 +882,15 @@ header{
     flex-direction: row;
     gap: 25px;
     width: 100%;
-    height: 70px;
+    height: 80px;
     margin-right: 30px;
     }
     .header__open-nav-button{
     display: none;
+    }
+    .header__logo{
+    width: 50px;
+    height: 50px;
     }
     .btn-1 a,.btn-2 a{
     font-size: 1.2em;
