--- a/style/styles.css
+++ b/style/styles.css
@@ -35,6 +35,7 @@ p{
     line-height: 1.5; 
 }
 a{
+    color: #e6e6e6;
     font-size: 12px;
     text-decoration: none;
     font-weight: 500;
@@ -53,7 +54,7 @@ header{
     left: 0;
     right: 0;
     width: 100%;
-    z-index: 1000;
+    z-index: 1100;
     position: sticky;
     background-color: #2a0202;
 }
@@ -68,13 +69,13 @@ header{
 .header__logo{
     display: block;
     z-index: 2;
-    width: 30px;
-    height: 30px;
-    margin: 10px 20px;
+    width: 35px;
+    height: 35px;
+    margin: 10px;
 }
 .header__logo-img{
     width: 100%;
-    margin-right: 12px;
+    margin-right: 8px;
     border-radius: 100%;
     background-color: #ffffff;
 }
@@ -101,17 +102,16 @@ header{
 .header a{
     transition: transform 0.3s ease-in-out;
     font-weight: bold;
-    color: #e6e6e6;
+    font-size: 1.1rem;
     display: flex;
+    padding: 5px;
 }
-.header a:hover{
+.header__nav-item a:hover{
     transform: translateY(-2px) scale(1.05);
-    color: #d7c74d;
+    border-bottom: 1px solid #5c5100;
 }
 .header__check{
-    background-color: #8b8b8b62;
-    padding: 4px 14px;
-    border-radius: 5px;
+    border-bottom: 2px solid #766800;
 }
 .header__checkbox{
     display: none;
@@ -217,7 +217,7 @@ header{
 }
 .btn-1{
     border: 1px solid #baaa33;
-    padding: 5px 15px;
+    padding: 4px 14px;
     border-radius: 4px;
     background-color: #baaa33;
 }
@@ -229,7 +229,7 @@ header{
     background-color: #eedd5d;
 }
 .btn-2{
-    padding: 5px 15px;
+    padding: 4px 14px;
     border: none;
     border: 1px solid #e6e6e6;
     border-radius: 4px;
@@ -245,31 +245,36 @@ header{
 /*------------------------------------------------------BOTONES----------------------------------------------------------*/
 /*-------------------------------------------------------FOOTER----------------------------------------------------------*/
 .footer__list{
-    display: flex;
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
     flex-wrap: wrap;
+    display: flex;
     gap: 15px;
     background: linear-gradient(#00030a);
-    padding: 20px 30px;
 }
 .footer__item{
     display: flex;
-    flex-direction: column;
-    width: 100%;
-    max-width: 300px;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 300px;
+    padding: 20px;
+    border-bottom: 2px solid #011328;
 }
 .footer__item-icon-uptaeb{
     width: 100px;
+    margin-bottom: 10px;
 }
 .footer__item-icon-lca{
-    width: 150px;
+    width: 140px;
     padding: 4px;
+    margin-bottom: 10px;
     background-color: white;
     border-radius: 100%;
+}
+.footer__item-icon-dev{
+    width: 70px;
 }
 /*-------------------------------------------------------FOOTER----------------------------------------------------------*/
 /*----------------------------------------------CONFIGURACIONES GENERALES------------------------------------------------*/
@@ -281,7 +286,7 @@ header{
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 180px;
+    height: 150px;
     display: flex;
 }
 .n-info{
@@ -289,10 +294,9 @@ header{
     text-align: left;
     align-items: center;
     justify-content: center;
-    width: 100%;
     height: 100%;
     padding: 20px;
-    max-width: 1100px;
+    width: 800px;
 }
 .n-info h3{
     font-weight: 700;
@@ -356,7 +360,7 @@ header{
     gap: 10px;
     width: 100%;
     padding: 20px 0;
-    max-width: 370px;
+    max-width: 380px;
     border-radius: 8px;
     background-color: #011328;
 }
@@ -383,6 +387,7 @@ header{
 .inicio__inscripcion-list{
     justify-content: center;
     gap: 25px;
+    padding: 0 20px;
     margin-top: 40px;
     display: flex;
     flex-wrap: wrap;
@@ -392,7 +397,7 @@ header{
     text-align: left;
     background-color: #011328;
     border-radius: 10px;
-    max-width: 400px;
+    max-width: 380px;
     padding: 30px;
     width: 100%;
     gap: 20px;
@@ -430,7 +435,7 @@ header{
 }
 .nosotros__historia-img{
     width: 100%;
-    height: 430px;
+    height: 320px;
     object-fit: cover;
     object-position: center center;
 }
@@ -590,7 +595,7 @@ header{
 /*--------------------------------------------------------CLASES---------------------------------------------------------*/
 .clases{
     background: linear-gradient(#000c1a,#00030a);
-    padding: 50px 35px;
+    padding: 20px 30px;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -660,6 +665,7 @@ header{
 .b{
     display: flex;
     width: 100%;
+    padding: 20px;
     margin-bottom: 40px;
 }
 .b-info{
@@ -680,7 +686,7 @@ header{
     gap: 10px;
 }
 .b-img{
-    width: 100px;
+    width: 80px;
 }
 /*----------------------------------------------------SECCION GALERIA----------------------------------------------------*/
 
@@ -818,8 +824,6 @@ header{
 
 
 
-
-
 /*------------------------------------------------------ANIMACIONES------------------------------------------------------*/
 @keyframes aparecer{
     from{
@@ -843,16 +847,16 @@ header{
     0% { transform: rotateZ(0deg) scale(1); }
     54% { transform: rotateZ(0deg) scale(1);}
 
-    55% { transform: rotateZ(-6deg) scale(1.03); }
-    60% { transform: rotateZ(-10deg) scale(1.05); }
-    65% { transform: rotateZ(-6deg) scale(1.03); }
-    70% { transform: rotateZ(-10deg) scale(1.05); }
-    75% { transform: rotateZ(-6deg) scale(1.03); }
-    80% { transform: rotateZ(-10deg) scale(1.05); }
-    85% { transform: rotateZ(-6deg) scale(1.03); }
-    90% { transform: rotateZ(-10deg) scale(1.05); }
-    95% { transform: rotateZ(-6deg) scale(1.03); }
-    100% { transform: rotateZ(-10deg) scale(1.05); }
+    55% { transform: rotateZ(-6deg) scale(1.04); }
+    60% { transform: rotateZ(-10deg) scale(1.04); }
+    65% { transform: rotateZ(-6deg) scale(1.04); }
+    70% { transform: rotateZ(-10deg) scale(1.06); }
+    75% { transform: rotateZ(-6deg) scale(1.06); }
+    80% { transform: rotateZ(-10deg) scale(1.06); }
+    85% { transform: rotateZ(-6deg) scale(1.08); }
+    90% { transform: rotateZ(-10deg) scale(1.08); }
+    95% { transform: rotateZ(-6deg) scale(1.08); }
+    100% { transform: rotateZ(-10deg) scale(1.08); }
 }
 /*------------------------------------------------------ANIMACIONES------------------------------------------------------*/
 /*-------------------------------------------------------RESPONSIVE------------------------------------------------------*/
@@ -868,10 +872,10 @@ header{
     }
     .header__nav-list{
     flex-direction: row;
-    gap: 25px;
+    gap: 15px;
     width: 100%;
     height: 60px;
-    margin-right: 30px;
+    margin-right: 10px;
     }
     .header__open-nav-button{
     display: none;
@@ -879,6 +883,9 @@ header{
     .header__logo{
     width: 40px;
     height: 40px;
+    }
+    .footer__item{
+    border-bottom: none;
     }
     .nosotros__historia{
     margin: 60px auto;
